<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_below="@+id/header_content"
    android:layout_marginBottom="@dimen/cell_vertical_margin"
    android:layout_marginEnd="@dimen/cell_horizontal_margin"
    android:layout_marginStart="@dimen/cell_horizontal_margin"
    android:layout_marginTop="@dimen/cell_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authors_view"
        android:orientation="vertical">
        <com.mobgen.gotmedia.app.presentation.view.TitleDescRowView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <com.mobgen.gotmedia.app.presentation.view.TitleDescRowView
            android:id="@+id/aliases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aliases" />
        <com.mobgen.gotmedia.app.presentation.view.TitleDescRowView
            android:id="@+id/allegiances"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allegiances" />

        <com.mobgen.gotmedia.app.presentation.view.TitleDescRowView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender" />

        <com.mobgen.gotmedia.app.presentation.view.TitleDescRowView
            android:id="@+id/born"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/born" />

        <com.mobgen.gotmedia.app.presentation.view.TitleDescRowView
            android:id="@+id/died"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/died" />

        <com.mobgen.gotmedia.app.presentation.view.TitleDescRowView
            android:id="@+id/spouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spouse" />

        <com.mobgen.gotmedia.app.presentation.view.TitleDescRowView
            android:id="@+id/father"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/father" />

        <com.mobgen.gotmedia.app.presentation.view.TitleDescRowView
            android:id="@+id/mother"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mother" />

        <com.mobgen.gotmedia.app.presentation.view.TitleDescRowView
            android:id="@+id/playedBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/played_by" />

        <com.mobgen.gotmedia.app.presentation.view.TitleDescRowView
            android:id="@+id/titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titles" />

        <com.mobgen.gotmedia.app.presentation.view.TitleDescRowView
            android:id="@+id/culture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Culture:"
            app:hideDivider="true" />
    </LinearLayout>
</android.support.v7.widget.CardView>